[package]
name = "joule-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread","macros","time"] }
parking_lot = "0.12"
sysinfo = "0.30"
blake3 = "1"
nvml-wrapper = { version = "0.11", default-features = false }
chrono = { version = "0.4", features = ["clock"] }
